--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "duuooo/duuooo.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   name             : "郑燕欣"
   pronouns         : # example: "she/her"  
-  bio              : #"Short biography for the left-hand sidebar"
+  bio              : "Cyberspace Security, python, C++, JAVA"
   location         : "Guangdong, China"
   employer         : "Jinan University"
   uri              : # URL
