--- a/_config.yml
+++ b/_config.yml
@@ -7,23 +7,23 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
+locale                   : "zh-CN"
 title                    : "Resume"
 title_separator          : "-"
 name                     : &name "郑燕欣"
 description              : &description "personal description"
 url                      : https://duuooo.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "duuooo/duuooo.github.io"
+repository               : "https://github.com/DUuOOO?tab=repositories"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "郑燕欣"
-  pronouns         : # example: "she/her"  
+  pronouns         : "she"  
   bio              : "Cyberspace Security, python, C++, JAVA"
   location         : "Guangdong, China"
   employer         : "Jinan University"
@@ -35,7 +35,6 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=gZLEFjMAAAAJ"
   impactstory      : # URL
   orcid            : "https://orcid.org/0009-0009-7360-962X"
-  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
   # Repositories and software development
