--- a/_config.yml
+++ b/_config.yml
@@ -201,6 +201,9 @@ collections:
   # teaching:
   #   output: true
   #   permalink: /:collection/:path/
+  Background:
+    output: true
+    permalink: /:collection/:path/
   publications:
     output: true
     permalink: /:collection/:path/
