--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "zh-CN"
 title                    : "Resume"
 title_separator          : "-"
 name                     : &name "郑燕欣"
-description              : &description "personal description"
+description              : #&description "personal description"
 url                      : https://duuooo.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/DUuOOO?tab=repositories"
@@ -23,8 +23,8 @@ author:
   # Biographic information
   avatar           : "profile.jpg"
   name             : "郑燕欣"
-  pronouns         : "she"  
-  bio              : "Cyberspace Security, python, C++, JAVA"
+  pronouns         : #"she"  
+  bio              : "网络空间安全, python, C++, Java"
   location         : "Guangdong, China"
   employer         : "Jinan University"
   uri              : # URL
