--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,12 @@ main:
     
   - title: "Publications"
     url: /publications/
-   
+
+  - title: "Honor"
+    url: /Honor/
+
+  - title: "Project Experiences"
+    url: /Project Experiences/
 
   - title: "CSDN"
     url: /CSDN/  
