--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ author:
   codepen          : # Username
   dribbble         : # Username
   github           : "DUuOOO"
-  CSDN             : "https://blog.csdn.net/duduoott"
+  CSDN             : "duduoott"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
