--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "郑燕欣"
   pronouns         : #"she"  
-  bio              : "网络空间安全, python, C++, Java"
+  bio              : "网络空间安全, Python, Java, C++"
   location         : "Guangdong, China"
   employer         : "Jinan University"
   uri              : # URL
